# nexus

./: .env.example  .gitignore  API_RUNNING_GUIDE.md  CHAT_DASHBOARD_GUIDE.md  COMPLETE_FIX_GUIDE.md  Dockerfile  ENHANCED_CHAT_COMPLETE.md  FULL_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION.md  README.md  alembic.ini  check_api.py  compare_dashboards.py  create_chat_dashboard.py  create_enhanced_chat.py  debug_errors.py  docker-compose.staging.yml  docker-compose.yml  env.example  final_check.py  full_demo.py  how_to_use_api.py  nexus_chat_dashboard.html  nexus_dashboard.html  nexus_enhanced_chat.html  prometheus.staging.yml  prometheus.yml  pyproject.toml  quick_test.py  quick_test2.py  setup_complete.py  test_all_fixes.py  test_api.py  test_basic.py  test_fixes.py  test_no_db.py  test_setup.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/routes/: approvals.py
approvals/: __init__.py  handler.py
dashboard/: app.py
docs/: MEETING_INTEGRATION.md
k8s/: deployment.yaml
nexus/: __init__.py  config.py  database.py
nexus/agents/: __init__.py  decision.py  meeting.py  monitoring.py  orchestrator.py  self_healing.py  sla_monitor.py
nexus/api/: __init__.py  main.py
nexus/llm/: __init__.py  router.py
nexus/memory/: __init__.py  audit_logger.py  contract_type_aliases.py  ingest_static.py  vector.py
scripts/: bootstrap_vector_memory.py
tests/: test_agents.py  test_contract_memory_filters.py  test_contract_type_aliases.py  test_integration.py  test_meeting_integration.py  test_orchestrator.py  test_sla_monitor.py  test_tools.py
(+22 files in other folders)
