[tool.poetry]
name = "nexus"
version = "0.1.0"
description = "NEXUS — Networked Enterprise eXecution & Unified Services"
authors = ["Rohit"]
readme = "README.md"
packages = [{include = "nexus"}]

[tool.poetry.dependencies]
python = "^3.11"
# API
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
# Agents — pinned LangGraph 1.x ecosystem
langgraph = "1.1.3"
langchain-core = "1.2.23"
langgraph-checkpoint = "4.0.1"
langgraph-prebuilt = "1.0.8"
langgraph-sdk = "0.3.12"
langsmith = "0.7.22"
# Database
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
# Schemas
pydantic = "^2.0"
pydantic-settings = "^2.0"
# HTTP
httpx = "^0.28.0"
# LLM — Ollama local
ollama = "^0.4.0"
# Vector stores
faiss-cpu = "^1.8.0"
chromadb = "^0.5.0"
# Meeting intelligence (Phase 7)
# openai-whisper = "^20231117"
# "pyannote.audio" = "^3.1"
# Cache
redis = "^5.0"
# Config
python-dotenv = "^1.0"
# Logging
structlog = "^24.0"
# Metrics
prometheus-fastapi-instrumentator = "^7.0"
# Supporting
orjson = "^3.10"
tenacity = "^9.0"

[tool.poetry.group.dev.dependencies]
streamlit = ">=1.37"
pytest = "^8.0"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
